# ot-harjoitustyo

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
documentation/: arkkitehtuuri.md  project specifications.md  project specifications.mkd  testing_document.md  time spent.md  time spent.mkd  user guide.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: __init__.py  maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: animationhandler.py  attack_tile.py  camera.py  combat.py  cursor.py  debug_display.py  game_loop.py  index.py  item.py  menu_cursor.py  move_tile.py  movement_display.py  movementdisplay.py  path_indicator.py  pathfinding.py  sprite_renderer.py  target_selector.py  unit.py  utility_functions.py
src/entities/: camera.py  cursor.py  event_queue.py  game_clock.py  item.py  level.py  menu_cursor.py  target_selector.py  unit.py
src/logic/: ai.py  combat.py  pathfinding.py
src/tests/: ai_test.py  camera_test.py  combat_test.py  cursor_test.py  game_clock_test.py  item_test.py  level_test.py  pathfinding_test.py  unit_test.py  utility_functions_test.py
src/ui/: animated_tile.py  attack_tile.py  map_tile.py  move_tile.py  movement_display.py  path_indicator.py  sprite_renderer.py  tile_map.py
