[tool.poetry]
name = "ot-strategy-game"
version = "0.1.0"
description = ""
authors = ["Arne Karila <arne.karila@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"
HeapDict = "^1.0.1"
invoke = "^1.5.0"
pytest = "^6.2.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
coverage = "^5.5"
pylint = "^2.7.4"
autopep8 = "^1.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
